Agregar botón de WhatsApp

--- a/css/style.css
+++ b/css/style.css
@@ -1998,7 +1998,7 @@ ul.benefits-together li {
 	z-index: 100;
 }
 
-.btn-whatsapp .whatsapp-icon {
+.btn-whatsapp .bi-whatsapp {
 	margin-top: 13px;
 }
 
